--- a/index.html
+++ b/index.html
@@ -43,6 +43,8 @@
 </style></head>
 
 <body onload="Launch()">
+    <a href="https://dirigity.github.io/diedric-agario/">En Github</a>
+    <br>
     <canvas id="PH" width="440" height="440" onclick="PH"></canvas>
     <canvas id="PV" width="440" height="440" onclick="PV"></canvas>
     <br>
