ahora el contador se reinicia cada vez que reinicias el juego

--- a/index.html
+++ b/index.html
@@ -159,6 +159,7 @@
         }
 
         function startGame() {
+            puntuation = 0;
             tickCounter = 0;
             if(Playing==false){
                 while(DataBase.length > 0) {
